CAMEL-21127 - Migrate from Deprecated o.a.maven.plugins.annotations.Component (#15400)
* CAMEL-21127 Migrate from Deprecated o.a.maven.plugins.annotations.Component

Signed-off-by: Adriano Machado <60320+ammachado@users.noreply.github.com>

* Fix imports on `ValidateMojo.java`

---------

Signed-off-by: Adriano Machado <60320+ammachado@users.noreply.github.com>
Co-authored-by: Claus Ibsen <claus.ibsen@gmail.com>